@@ -43,16 +43,15 @@ Rcpp::List europeanOptionEngine(std::string type,
     QuantLib::Option::Type optionType = getOptionType(type);
     QuantLib::Date today = QuantLib::Date::todaysDate();
     QuantLib::Settings::instance().evaluationDate() = today;
-
-    // new framework as per QuantLib 0.3.5
     QuantLib::DayCounter dc = QuantLib::Actual360();
-    QuantLib::ext::shared_ptr<QuantLib::SimpleQuote> spot(new QuantLib::SimpleQuote( underlying ));
-    QuantLib::ext::shared_ptr<QuantLib::SimpleQuote> vol(new QuantLib::SimpleQuote( volatility ));
-    QuantLib::ext::shared_ptr<QuantLib::BlackVolTermStructure> volTS = flatVol(today, vol, dc);
-    QuantLib::ext::shared_ptr<QuantLib::SimpleQuote> qRate(new QuantLib::SimpleQuote( dividendYield ));
-    QuantLib::ext::shared_ptr<QuantLib::YieldTermStructure> qTS = flatRate(today, qRate, dc);
-    QuantLib::ext::shared_ptr<QuantLib::SimpleQuote> rRate(new QuantLib::SimpleQuote( riskFreeRate ));
-    QuantLib::ext::shared_ptr<QuantLib::YieldTermStructure> rTS = flatRate(today, rRate, dc);
+    namespace qlext = QuantLib::ext; 				// convenience namespace shortcut
+    auto spot  = qlext::make_shared<QuantLib::SimpleQuote>(underlying);
+    auto vol   = qlext::make_shared<QuantLib::SimpleQuote>(volatility);
+    auto volTS = flatVol(today, vol, dc); 		// cf src/utils.cpp
+    auto qRate = qlext::make_shared<QuantLib::SimpleQuote>(dividendYield);
+    auto qTS   = flatRate(today, qRate, dc); 	// cf src/utils.cpp
+    auto rRate = qlext::make_shared<QuantLib::SimpleQuote>(riskFreeRate);
+    auto rTS   = flatRate(today, rRate, dc); 	// cf src/utils.cpp
 
     bool withDividends = discreteDividends.isNotNull() && discreteDividendsTimeUntil.isNotNull();
 
@@ -62,8 +61,8 @@ Rcpp::List europeanOptionEngine(std::string type,
     QuantLib::Date exDate = today + length;
 #endif
 
-    QuantLib::ext::shared_ptr<QuantLib::Exercise> exercise(new QuantLib::EuropeanExercise(exDate));
-    QuantLib::ext::shared_ptr<QuantLib::StrikedTypePayoff> payoff(new QuantLib::PlainVanillaPayoff(optionType, strike));
+    auto exercise = qlext::make_shared<QuantLib::EuropeanExercise>(exDate);
+    auto payoff   = qlext::make_shared<QuantLib::PlainVanillaPayoff>(optionType, strike);
 
     if (withDividends) {
         Rcpp::NumericVector divvalues(discreteDividends), divtimes(discreteDividendsTimeUntil);
@@ -80,13 +79,13 @@ Rcpp::List europeanOptionEngine(std::string type,
             discDividends[i] = divvalues[i];
         }
 
-        QuantLib::ext::shared_ptr<QuantLib::BlackScholesMertonProcess>
-            stochProcess(new QuantLib::BlackScholesMertonProcess(QuantLib::Handle<QuantLib::Quote>(spot),
-                                                                 QuantLib::Handle<QuantLib::YieldTermStructure>(qTS),
-                                                                 QuantLib::Handle<QuantLib::YieldTermStructure>(rTS),
-                                                                 QuantLib::Handle<QuantLib::BlackVolTermStructure>(volTS)));
+        typedef QuantLib::BlackScholesMertonProcess qlBSMp;
+        auto stochProcess = qlext::make_shared<qlBSMp>(QuantLib::Handle<QuantLib::Quote>(spot),
+                                                       QuantLib::Handle<QuantLib::YieldTermStructure>(qTS),
+                                                       QuantLib::Handle<QuantLib::YieldTermStructure>(rTS),
+                                                       QuantLib::Handle<QuantLib::BlackVolTermStructure>(volTS));
 
-        QuantLib::ext::shared_ptr<QuantLib::PricingEngine> engine(new QuantLib::AnalyticDividendEuropeanEngine(stochProcess, QuantLib::DividendVector(discDivDates, discDividends)));
+        auto engine = qlext::make_shared<QuantLib::AnalyticDividendEuropeanEngine>(stochProcess, QuantLib::DividendVector(discDivDates, discDividends));
 
         QuantLib::VanillaOption option(payoff, exercise);
         option.setPricingEngine(engine);
@@ -101,14 +100,13 @@ Rcpp::List europeanOptionEngine(std::string type,
     }
     else {
 
-        QuantLib::ext::shared_ptr<QuantLib::VanillaOption> option = makeOption(payoff, exercise, spot, qTS, rTS, volTS);
-
-        return Rcpp::List::create(Rcpp::Named("value") = option->NPV(),
-                                  Rcpp::Named("delta") = option->delta(),
-                                  Rcpp::Named("gamma") = option->gamma(),
-                                  Rcpp::Named("vega") = option->vega(),
-                                  Rcpp::Named("theta") = option->theta(),
-                                  Rcpp::Named("rho") = option->rho(),
+        auto option = makeOption(payoff, exercise, spot, qTS, rTS, volTS);
+        return Rcpp::List::create(Rcpp::Named("value")  = option->NPV(),
+                                  Rcpp::Named("delta")  = option->delta(),
+                                  Rcpp::Named("gamma")  = option->gamma(),
+                                  Rcpp::Named("vega")   = option->vega(),
+                                  Rcpp::Named("theta")  = option->theta(),
+                                  Rcpp::Named("rho")    = option->rho(),
                                   Rcpp::Named("divRho") = option->dividendRho());
     }
 
@@ -137,18 +135,17 @@ Rcpp::List americanOptionEngine(std::string type,
 #endif
     QuantLib::Option::Type optionType = getOptionType(type);
 
-    // new framework as per QuantLib 0.3.5, updated for 0.3.7
-    // updated again for 0.9.0, see eg test-suite/americanoption.cpp
     QuantLib::Date today = QuantLib::Date::todaysDate();
     QuantLib::Settings::instance().evaluationDate() = today;
     QuantLib::DayCounter dc = QuantLib::Actual360();
-    QuantLib::ext::shared_ptr<QuantLib::SimpleQuote> spot(new QuantLib::SimpleQuote(underlying));
-    QuantLib::ext::shared_ptr<QuantLib::SimpleQuote> qRate(new QuantLib::SimpleQuote(dividendYield));
-    QuantLib::ext::shared_ptr<QuantLib::YieldTermStructure> qTS = flatRate(today,qRate,dc);
-    QuantLib::ext::shared_ptr<QuantLib::SimpleQuote> rRate(new QuantLib::SimpleQuote(riskFreeRate));
-    QuantLib::ext::shared_ptr<QuantLib::YieldTermStructure> rTS = flatRate(today,rRate,dc);
-    QuantLib::ext::shared_ptr<QuantLib::SimpleQuote> vol(new QuantLib::SimpleQuote(volatility));
-    QuantLib::ext::shared_ptr<QuantLib::BlackVolTermStructure> volTS = flatVol(today, vol, dc);
+    namespace qlext = QuantLib::ext; 				// convenience namespace shortcut
+    auto spot  = qlext::make_shared<QuantLib::SimpleQuote>(underlying);
+    auto qRate = qlext::make_shared<QuantLib::SimpleQuote>(dividendYield);
+    auto qTS   = flatRate(today, qRate, dc); 	// cf src/utils.cpp
+    auto rRate = qlext::make_shared<QuantLib::SimpleQuote>(riskFreeRate);
+    auto rTS   = flatRate(today, rRate, dc); 	// cf src/utils.cpp
+    auto vol   = qlext::make_shared<QuantLib::SimpleQuote>(volatility);
+    auto volTS = flatVol(today, vol, dc); 		// cf src/utils.cpp
 
     bool withDividends = discreteDividends.isNotNull() && discreteDividendsTimeUntil.isNotNull();
 
@@ -158,14 +155,14 @@ Rcpp::List americanOptionEngine(std::string type,
     QuantLib::Date exDate = today + length;
 #endif
 
-    QuantLib::ext::shared_ptr<QuantLib::StrikedTypePayoff> payoff(new QuantLib::PlainVanillaPayoff(optionType, strike));
-    QuantLib::ext::shared_ptr<QuantLib::Exercise> exercise(new QuantLib::AmericanExercise(today, exDate));
+    auto exercise = qlext::make_shared<QuantLib::AmericanExercise>(today, exDate);
+    auto payoff   = qlext::make_shared<QuantLib::PlainVanillaPayoff>(optionType, strike);
 
-    QuantLib::ext::shared_ptr<QuantLib::BlackScholesMertonProcess>
-        stochProcess(new QuantLib::BlackScholesMertonProcess(QuantLib::Handle<QuantLib::Quote>(spot),
-                                                             QuantLib::Handle<QuantLib::YieldTermStructure>(qTS),
-                                                             QuantLib::Handle<QuantLib::YieldTermStructure>(rTS),
-                                                             QuantLib::Handle<QuantLib::BlackVolTermStructure>(volTS)));
+    typedef QuantLib::BlackScholesMertonProcess qlBSMp;
+    auto stochProcess = qlext::make_shared<qlBSMp>(QuantLib::Handle<QuantLib::Quote>(spot),
+                                                   QuantLib::Handle<QuantLib::YieldTermStructure>(qTS),
+                                                   QuantLib::Handle<QuantLib::YieldTermStructure>(rTS),
+                                                   QuantLib::Handle<QuantLib::BlackVolTermStructure>(volTS));
 
     if (withDividends) {
         Rcpp::NumericVector divvalues(discreteDividends), divtimes(discreteDividendsTimeUntil);
@@ -208,8 +205,7 @@ Rcpp::List americanOptionEngine(std::string type,
 
         if (engine=="BaroneAdesiWhaley") {
             // new from 0.3.7 BaroneAdesiWhaley
-
-            QuantLib::ext::shared_ptr<QuantLib::PricingEngine> engine(new QuantLib::BaroneAdesiWhaleyApproximationEngine(stochProcess));
+            auto engine = qlext::make_shared<QuantLib::BaroneAdesiWhaleyApproximationEngine>(stochProcess);
             option.setPricingEngine(engine);
             return Rcpp::List::create(Rcpp::Named("value") = option.NPV(),
                                       Rcpp::Named("delta") = R_NaReal,
@@ -219,10 +215,9 @@ Rcpp::List americanOptionEngine(std::string type,
                                       Rcpp::Named("rho") = R_NaReal,
                                       Rcpp::Named("divRho") = R_NaReal);
         } else if (engine=="CrankNicolson") {
-            // suggestion by Bryan Lewis: use CrankNicolson for greeks
-            QuantLib::ext::shared_ptr<QuantLib::PricingEngine>
-            fdcnengine(new QuantLib::FdBlackScholesVanillaEngine(stochProcess, timeSteps, gridPoints));
-            option.setPricingEngine(fdcnengine);
+            // suggestion by Bryan Lewis: use CrankNicolson for greeks (but now down to delta + gamma)
+            auto engine = qlext::make_shared<QuantLib::FdBlackScholesVanillaEngine>(stochProcess, timeSteps, gridPoints);
+            option.setPricingEngine(engine);
             return Rcpp::List::create(Rcpp::Named("value") = option.NPV(),
                                       Rcpp::Named("delta") = option.delta(),
                                       Rcpp::Named("gamma") = option.gamma(),
@@ -265,23 +260,23 @@ Rcpp::List europeanOptionArraysEngine(std::string type, Rcpp::NumericMatrix par)
 #endif
         double volatility    = par(i, 5);    // sixth column
 
-        QuantLib::ext::shared_ptr<QuantLib::SimpleQuote> spot(new QuantLib::SimpleQuote( underlying ));
-        QuantLib::ext::shared_ptr<QuantLib::SimpleQuote> vol(new QuantLib::SimpleQuote( volatility ));
-        QuantLib::ext::shared_ptr<QuantLib::BlackVolTermStructure> volTS = flatVol(today, vol, dc);
-        QuantLib::ext::shared_ptr<QuantLib::SimpleQuote> qRate(new QuantLib::SimpleQuote( dividendYield ));
-        QuantLib::ext::shared_ptr<QuantLib::YieldTermStructure> qTS = flatRate(today, qRate, dc);
-        QuantLib::ext::shared_ptr<QuantLib::SimpleQuote> rRate(new QuantLib::SimpleQuote( riskFreeRate ));
-        QuantLib::ext::shared_ptr<QuantLib::YieldTermStructure> rTS = flatRate(today, rRate, dc);
+        namespace qlext = QuantLib::ext; 	 // convenience namespace shortcut
+        auto spot  = qlext::make_shared<QuantLib::SimpleQuote>(underlying);
+        auto vol   = qlext::make_shared<QuantLib::SimpleQuote>(volatility);
+        auto volTS = flatVol(today, vol, dc); 		// cf src/utils.cpp
+        auto qRate = qlext::make_shared<QuantLib::SimpleQuote>(dividendYield);
+        auto qTS   = flatRate(today, qRate, dc); 	// cf src/utils.cpp
+        auto rRate = qlext::make_shared<QuantLib::SimpleQuote>(riskFreeRate);
+        auto rTS   = flatRate(today, rRate, dc); 	// cf src/utils.cpp
 
 #ifdef QL_HIGH_RESOLUTION_DATE
     QuantLib::Date exDate(today.dateTime() + length);
 #else
     QuantLib::Date exDate = today + length;
 #endif
-        QuantLib::ext::shared_ptr<QuantLib::Exercise> exercise(new QuantLib::EuropeanExercise(exDate));
-
-        QuantLib::ext::shared_ptr<QuantLib::StrikedTypePayoff> payoff(new QuantLib::PlainVanillaPayoff(optionType, strike));
-        QuantLib::ext::shared_ptr<QuantLib::VanillaOption> option = makeOption(payoff, exercise, spot, qTS, rTS, volTS);
+        auto exercise = qlext::make_shared<QuantLib::EuropeanExercise>(exDate);
+        auto payoff   = qlext::make_shared<QuantLib::PlainVanillaPayoff>(optionType, strike);
+        auto option = makeOption(payoff, exercise, spot, qTS, rTS, volTS);
 
         value[i]  = option->NPV();
         delta[i]  = option->delta();
